@@ -3,8 +3,9 @@ Changelog since cleanup-branch of 31.01.2020
 
 changelog of master-branch
     - changed TextureAtlas-block-addition system to be based on mod-based/texture size-based atlases
-    - new blocks: furnace with inventory & crafting, barrel
+    - new blocks: furnace with inventory & crafting, barrel, ice variants
     - added key "E" to close various inventories
+    - Block-class has now an CUSTOM_WALING_SPEED_MULTIPLIER-attribute used for custom waling speeds ontop of blocks
     fixed bugs:
         - game crashes when using "/tp <position>"-command
         - debug world doesn't use the state definition correctly
